# ubuntu-touch-day-scope

./: .gitignore  CMakeLists.txt  README.md  assets  manifest.json.in  security.json.in
data/: CMakeLists.txt  Makefile  cmake_install.cmake  scope.ini  scope.ini.in  scope.ini.in.in  translatables.json
include/: CMakeLists.txt  Makefile  cmake_install.cmake  config.h  config.h.in  i18n.h  i18n.h.in  preview.h  query.h  scope.h
po/: CMakeLists.txt  JSONS  Makefile  POTFILES.in  bg.po  ca.po  cmake_install.cmake  cs.po  da.po  day.pot  de.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gd.po  gl.po  hu.po  is.po  it.po  make-pot.sh  make-pot.sh.in  mrg.sh  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sv.po  uk.po  update-pos-from-pot.sh  update-pos-from-pot.sh.in  zh_CN.po  zh_TW.po
po/built_mos/locale/bg/LC_MESSAGES/: day.mo
po/built_mos/locale/ca/LC_MESSAGES/: day.mo
po/built_mos/locale/cs/LC_MESSAGES/: day.mo
po/built_mos/locale/da/LC_MESSAGES/: day.mo
po/built_mos/locale/de/LC_MESSAGES/: day.mo
po/built_mos/locale/el/LC_MESSAGES/: day.mo
po/built_mos/locale/en_GB/LC_MESSAGES/: day.mo
po/built_mos/locale/es/LC_MESSAGES/: day.mo
po/built_mos/locale/eu/LC_MESSAGES/: day.mo
po/built_mos/locale/fi/LC_MESSAGES/: day.mo
po/built_mos/locale/fr/LC_MESSAGES/: day.mo
po/built_mos/locale/gd/LC_MESSAGES/: day.mo
po/built_mos/locale/gl/LC_MESSAGES/: day.mo
po/built_mos/locale/hu/LC_MESSAGES/: day.mo
po/built_mos/locale/is/LC_MESSAGES/: day.mo
po/built_mos/locale/it/LC_MESSAGES/: day.mo
po/built_mos/locale/nb/LC_MESSAGES/: day.mo
po/built_mos/locale/nl/LC_MESSAGES/: day.mo
po/built_mos/locale/pl/LC_MESSAGES/: day.mo
po/built_mos/locale/pt/LC_MESSAGES/: day.mo
po/built_mos/locale/pt_BR/LC_MESSAGES/: day.mo
po/built_mos/locale/ru/LC_MESSAGES/: day.mo
po/built_mos/locale/sk/LC_MESSAGES/: day.mo
po/built_mos/locale/sl/LC_MESSAGES/: day.mo
po/built_mos/locale/sr/LC_MESSAGES/: day.mo
po/built_mos/locale/sv/LC_MESSAGES/: day.mo
po/built_mos/locale/uk/LC_MESSAGES/: day.mo
po/built_mos/locale/zh_CN/LC_MESSAGES/: day.mo
po/built_mos/locale/zh_TW/LC_MESSAGES/: day.mo
src/: .query.cpp.swp  CMakeLists.txt  Makefile  cmake_install.cmake  preview.cpp  query.cpp  scope.cpp  scope.ini
tests/: CMakeLists.txt  Makefile  __init__.py  cmake_install.cmake
tests/autopilot/: CMakeLists.txt  Makefile  cmake_install.cmake  scope-data
tests/autopilot/day/: CMakeLists.txt  Makefile  cmake_install.cmake  test_generic.py  test_generic.py.in
